--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
         data() {
           return {
             video: null,
+            selectedLocation: null,
             locations: ["schwendi-edeka"],
             token: null,
             sirvClientId: "8RtzuAKey4YecOnXfcBcocQCRas",
@@ -90,6 +91,8 @@
           };
         },
         async mounted() {
+          this.selectedLocation = this.locations[0];
+
           const token_response = await fetch("https://api.sirv.com/v2/token", {
             method: "POST",
             body: JSON.stringify({
@@ -104,16 +107,19 @@
 
           const canvas = new fabric.Canvas("c");
 
-          fabric.Image.fromURL("./images/schwendi-edeka.png", (image) => {
-            image.selectable = false;
-            canvas
-              .add(
-                image
-                  .scaleToWidth(canvas.getWidth())
-                  .scaleToHeight(canvas.getHeight())
-              )
-              .sendToBack(image);
-          });
+          fabric.Image.fromURL(
+            "./images/" + this.selectedLocation + ".png",
+            (image) => {
+              image.selectable = false;
+              canvas
+                .add(
+                  image
+                    .scaleToWidth(canvas.getWidth())
+                    .scaleToHeight(canvas.getHeight())
+                )
+                .sendToBack(image);
+            }
+          );
 
           const cross = new CrossObject({ top: 100, left: 100, fill: "red" });
           cross.hasControls = false;
@@ -158,7 +164,8 @@
 
             console.debug({ video: this.video, canvas, context });
 
-            const file_name = "/" + "schwendi-edeka" + "/" + uuidv4() + ".png";
+            const file_name =
+              "/" + this.selectedLocation + "/" + uuidv4() + ".png";
 
             const file_response = await fetch(
               "https://api.sirv.com/v2/files/upload?filename=" + file_name,
