--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,7 @@
       const App = {
         data() {
           return {
+            cross: null,
             video: null,
             selectedLocation: null,
             locations: ["schwendi-edeka"],
@@ -121,24 +122,12 @@
             }
           );
 
-          const cross = new CrossObject({ top: 100, left: 100, fill: "red" });
-          cross.hasControls = false;
-          canvas.add(cross).bringToFront(cross);
-
-          cross.on("moved", (event) => {
-            const box = event.transform.target.getCoords();
-            const x = box[0]["x"] + (box[2]["x"] - box[0]["x"]) / 2;
-            const y = box[0]["y"] + (box[2]["y"] - box[0]["y"]) / 2;
+          this.cross = new CrossObject({ top: 100, left: 100, fill: "red" });
+          this.cross.hasControls = false;
+          canvas.add(this.cross).bringToFront(this.cross);
 
             console.debug({
-              cross: true,
-              moved: true,
-              event,
-              target: event.transform.target,
-              coords: box,
-              position: { x, y },
             });
-          });
         },
         methods: {
           start_video() {
@@ -180,13 +169,18 @@
             );
             console.debug({ file_response });
 
+            const box = this.cross.getCoords();
+
             const meta_response = await fetch(
               "https://api.sirv.com/v2/files/meta/description?filename=" +
                 file_name,
               {
                 method: "POST",
                 body: JSON.stringify({
-                  description: JSON.stringify({ x: 127, y: 122 }),
+                  description: JSON.stringify({
+                    x: box[0]["x"] + (box[2]["x"] - box[0]["x"]) / 2,
+                    y: box[0]["y"] + (box[2]["y"] - box[0]["y"]) / 2,
+                  }),
                 }),
                 headers: {
                   "content-type": "application/json",
